Replaced old index.htm with most recent index.htm

--- a/index.htm
+++ b/index.htm
@@ -39,14 +39,18 @@
   </div>
 
   <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-    <a href="#band" class="w3-bar-item w3-button w3-padding-large">BAND</a>
-    <a href="#tour" class="w3-bar-item w3-button w3-padding-large">TOUR</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">MERCH</a>
+  <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium">
+    <div class="w3-bar-block w3-black w3-top" style="margin-top:46px">
+      <a href="#band" class="w3-bar-item w3-button w3-padding-large">BAND</a>
+      <a href="#tour" class="w3-bar-item w3-button w3-padding-large">TOUR</a>
+      <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
+      <a href="#" class="w3-bar-item w3-button w3-padding-large">MERCH</a>
+    </div>
+    <div>
+     <a id="navTransparentClickAwayArea" href="javascript:void(0)" onclick="myFunction2()" class="w3-bar-item w3-button w3-padding-large"></a>
+    </div>
   </div>
-    <a id="navDemo" id="navTransparentClickAwayArea" href="javascript:void(0)" onclick="myFunction2()" class="w3-bar-item w3-button w3-padding-large"></a>
-
+  
   <script type="text/javascript">
     // Used to toggle the menu on small screens when clicking on the menu button
     function myFunction() {
