--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!--   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato"> -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Andika'>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -20,9 +21,10 @@
 <body>
   <!-- Navbar -->
   <div class="w3-top">
-    <div class="w3-bar w3-black w3-card">
+    <div class="w3-bar lodo-red w3-card">
       <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+      <a href="#" class="w3-bar-item w3-button w3-padding-large" id="navLogoContainer"><img src="images/lodo-dog-rt.svg" alt="playful puppy LODO Logo" id="navLogo"></a>
+      <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
       <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BAND</a>
       <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TOUR</a>
       <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
@@ -40,7 +42,7 @@
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium">
-    <div class="w3-bar-block w3-black w3-top" style="margin-top:46px">
+    <div class="w3-bar-block lodo-red w3-top" style="margin-top:57px"> <!-- 46px for Verdana -->
       <a href="#band" class="w3-bar-item w3-button w3-padding-large">BAND</a>
       <a href="#tour" class="w3-bar-item w3-button w3-padding-large">TOUR</a>
       <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
