--- a/index.htm
+++ b/index.htm
@@ -20,39 +20,49 @@
 
 <body>
   <!-- Navbar -->
-  <div class="w3-top">
-    <div class="w3-bar lodo-red w3-card">
-      <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-large" id="navLogoContainer"><img src="images/lodo-dog-rt.svg" alt="playful puppy LODO Logo" id="navLogo"></a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-large">Home</a>
-      <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BAND</a>
-      <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TOUR</a>
-      <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
-      <div class="w3-dropdown-hover w3-hide-small">
-        <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
+  <!--         Home
+        About Us
+        FAQ?
+        Classes and Events
+        Class Schedule
+        Contact Us -->
+  <div class="w3-top" class="zTop">
+    <div class="w3-bar lodo-red w3-card card">
+      <a class="w3-bar-item w3-button button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+      <a href="#" class="w3-bar-item" id="navLogoContainer"><img src="images/lodo-dog-rt/lodo-dog-rt.svg" alt="" id="navLogo"></a>
+      <a href="#" class="w3-bar-item w3-button button w3-padding-large">Home</a>
+      <a href="#band" class="w3-bar-item w3-button button w3-padding-large w3-hide-small">Schedule</a>
+      <a href="#tour" class="w3-bar-item w3-button button w3-padding-large w3-hide-small">Classes & Events</a>
+      <a href="#contact" class="w3-bar-item w3-button button w3-padding-large w3-hide-small">About</a>
+<!--       <div class="w3-dropdown-hover w3-hide-small">
+        <button class="button" title="More">More <i class="fa fa-caret-down"></i></button>     
         <div class="w3-dropdown-content w3-bar-block w3-card-4">
-          <a href="#" class="w3-bar-item w3-button">Merchandise</a>
-          <a href="#" class="w3-bar-item w3-button">Extras</a>
-          <a href="#" class="w3-bar-item w3-button">Media</a>
+          <a href="#" class="w3-bar-item button">Merchandise</a>
+          <a href="#" class="w3-bar-item button">Extras</a>
+          <a href="#" class="w3-bar-item button">Media</a>
         </div>
       </div>
-      <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
+      <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a> -->
     </div>
   </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium">
-    <div class="w3-bar-block lodo-red w3-top" style="margin-top:57px"> <!-- 46px for Verdana -->
-      <a href="#band" class="w3-bar-item w3-button w3-padding-large">BAND</a>
-      <a href="#tour" class="w3-bar-item w3-button w3-padding-large">TOUR</a>
-      <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-large">MERCH</a>
+    <div class="w3-bar-block lodo-red w3-top" style="margin-top:43px"> <!-- 46px for Verdana -->
+      <a href="#band" class="w3-bar-item w3-button button w3-padding-large">Schedule</a>
+      <a href="#tour" class="w3-bar-item w3-button button w3-padding-large">Classes & Events</a>
+      <a href="#contact" class="w3-bar-item w3-button button w3-padding-large">About</a>
+      <a href="#" class="w3-bar-item w3-button button w3-padding-large">Merch</a>
     </div>
     <div>
-     <a id="navTransparentClickAwayArea" href="javascript:void(0)" onclick="myFunction2()" class="w3-bar-item w3-button w3-padding-large"></a>
+     <a id="navTransparentClickAwayArea" href="javascript:void(0)" onclick="myFunction2()" class="w3-bar-item w3-button button w3-padding-large"></a>
     </div>
   </div>
   
+  <div id="mainImageContainer">
+    <header id="mainSlogan">Train with Love, Since&nbsp1982</header>
+  </div>
+
   <script type="text/javascript">
     // Used to toggle the menu on small screens when clicking on the menu button
     function myFunction() {
