--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset='utf-8' />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Live Oak Dog Obedience</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Krub:400,500,600,700|Montserrat:400,500,600|Noto+Sans+KR|KoHo|Roboto+Slab" rel="stylesheet">
