--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8' />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Live Oak Dog Obedience</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles-m.css">
 	<link href="https://fonts.googleapis.com/css?family=Krub:400,500,600,700|Montserrat:400,500,600|Noto+Sans+KR|KoHo|Roboto+Slab" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -247,7 +247,7 @@
 <body>
 
 	<nav>
-		<img class="splash-logo" src="images/lodo-dog-rt.svg" alt="logo of playful dog"></img>
+		<img class="splash-logo" src="images/lodo-dog-rt.svg" alt="logo of playful dog">
 		<ul>
 			<a class="active" href="#"><li>HOME</li></a>
 			<a href="classes.html"><li>CLASSES</li></a>
@@ -261,6 +261,7 @@
 			<a href="contact.html"><li>CONTACT</li></a>
 		</ul>
 		<img class="splash-logo" src="images/lodo-dog-rt.svg" alt="logo of playful dog">
+		<a id="m-nav"><img src="images/bars-solid-white.svg"></a>
 	</nav>
 	
 	<div class="splash">
