--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 		<div class="slogan-box1">
 			<h3>
 				<img src="images/dog-treat-quote2s-lighter.png">
-				Training&nbsp<span>You</span>&nbspto&nbsptrain&nbspyour&nbspdog so&nbspthey&nbsplisten&nbspto&nbsp<span>You</span>,&nbspnot&nbspus!
+				Training <span>You</span> to train your dog<br /> so they listen to <span>You</span>, not us!
 				<img src="images/dog-treat-quote2s-lighter.png">
 			</h3>
 		</div>
