--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 <body>
 
 	<nav>
-		<img class="splash-logo" src="images/lodo-dog-rt.svg" alt="logo of playful dog">
+		<img class="splash-logo" src="images/lodo-dog-rt-grey.svg" alt="logo of playful dog">
 		<ul>
 			<a class="active" href="#"><li>HOME</li></a>
 			<a href="classes.html"><li>CLASSES</li></a>
@@ -260,8 +260,8 @@
 			<a href="about.html"><li>ABOUT</li></a>
 			<a href="contact.html"><li>CONTACT</li></a>
 		</ul>
-		<img class="splash-logo" src="images/lodo-dog-rt.svg" alt="logo of playful dog">
-		<a id="m-nav"><img src="images/bars-solid-white.svg"></a>
+		<img class="splash-logo" src="images/lodo-dog-rt-grey.svg" alt="logo of playful dog">
+		<a id="m-nav"><img src="images/bars-solid-grey.svg"></a>
 	</nav>
 	
 	<div class="splash">
