structured styles to be mobile first with a separate desktop style sheet

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset='utf-8' />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Live Oak Dog Obedience</title>
-	<link rel="stylesheet" type="text/css" media="screen and (max-width: 360px)" href="css/styles-m.css">
-	<link rel="stylesheet" type="text/css" media="screen and (min-width: 361px)" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles-m.css">
+	<link rel="stylesheet" type="text/css" media="screen and (min-width: 361px)" href="css/styles-d.css">
 	<link href="https://fonts.googleapis.com/css?family=Krub:400,500,600,700|Montserrat:400,500,600|Noto+Sans+KR|KoHo|Roboto+Slab" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
