many changes, neglected committing for awhile

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 	<link href="https://fonts.googleapis.com/css?family=Krub:400,500,600,700|Montserrat:400,500,600|Noto+Sans+KR|KoHo|Roboto+Slab" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+	<!-- favicon -->
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://www.liveoakdogobedience.com/apple-touch-icon-144x144.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://www.liveoakdogobedience.com/apple-touch-icon-152x152.png" />
+	<!-- UNCOMMENT THIS FOR LIVE VERSION -->
+	<!-- <link rel="icon" type="image/png" href="http://www.liveoakdogobedience.com/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="http://www.liveoakdogobedience.com/favicon-16x16.png" sizes="16x16" /> -->
+	<!-- FOR DEVELOPMENT -->
+	<link rel="icon" type="image/png" href="file:///C:/Users/tunac/Google%20Drive/Web%20Dev/LODO-New/Development/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="file:///C:/Users/tunac/Google%20Drive/Web%20Dev/LODO-New/Development/favicon-16x16.png" sizes="16x16" />
+	<meta name="application-name" content="Live Oak Dog Obedience"/>
+	<meta name="msapplication-TileColor" content="#DADADA" />
+	<meta name="msapplication-TileImage" content="http://www.liveoakdogobedience.com/mstile-144x144.png" />
+
 	<!-- FullCalendar Styles -->
 	<link href='calendar/fullcalendar-4.0.1/packages/core/main.css' rel='stylesheet' />
 	<!-- mobile uses list view -->
@@ -307,9 +320,9 @@
 	<div class="section-slogan">
 		<div class="slogan-box1">
 			<h3>
-				<img src="images/dog-treat-quote2s-lighter.png">
+				<!-- <img src="images/dog-treat-quote2s-lighter.png"> -->
 				Training <span>You</span> to train your dog<br /> so they listen to <span>You</span>, not us!
-				<img src="images/dog-treat-quote2s-lighter.png">
+				<!-- <img src="images/dog-treat-quote2s-lighter.png"> -->
 			</h3>
 		</div>
 		<div class="slogan-box2"></div>
