classes page changes

--- a/classes.html
+++ b/classes.html
@@ -70,7 +70,7 @@
                 <li>Discuss puppy health and medical needs with a licensed veterinarian</li>
             </ul>
             <p>Puppy Pre-School is invaluable in avoiding future behavior problems and making your training experience much smoother.  The class will be a very positive introduction to training, preventing behavior problems, and in building a relationship with the other members of the family.  All behavior problems will be thoroughly discussed along with socialization.  Training and various types of socialization result in a confident, well-adjusted adult dog.  A licensed veterinarian will also be there to discuss puppy health and medical needs. This class is held indoors.  The floors are treated in an effort to discourage the spreading of viruses.  Due to popular demand, reservations are requested.  Class size is limited.</p>
-            <div class="alert">All puppies MUST be current on all vaccinations and have a complete health check up from a licensed veterinarian before entering the class. First meeting is held without the puppies.</div>
+            <div class="alert"><img src="images/exclamation-circle-solid.svg"><p>• All puppies MUST be current on all vaccinations and have a complete health check up from a licensed veterinarian before entering the class. <br>• First meeting is held without the puppies.</p></div>
         </div>
         <div class="class-card">
             <img class="card-pic" src="images/card-beginner-thin.png" alt="dog">
