--- a/classes.html
+++ b/classes.html
@@ -58,24 +58,34 @@
     </nav>
     
     <div id="classesPg-section-grid">
-        <div class="class-card">
-            <img class="card-pic" src="images/card-puppy-thin.png" alt="puppy">
-            <!-- <div class="card-title-container"> -->
-                <!-- <img class="card-icon" src="images/dog-solid-black.svg" alt="dog icon"> -->
-                <h3>Puppy&nbspPre&nbspSchool &&nbspSocialization</h3>
-            <!-- </div> -->
-            <ul>
-                <li>For puppies 8 to 20 weeks</li>
-                <li>Intro to training, preventing behavior problems, and socialization</li>
-                <li>Discuss puppy health and medical needs with a licensed veterinarian</li>
-            </ul>
-            <p>Puppy Pre-School is invaluable in avoiding future behavior problems and making your training experience much smoother.  The class will be a very positive introduction to training, preventing behavior problems, and in building a relationship with the other members of the family.  All behavior problems will be thoroughly discussed along with socialization.  Training and various types of socialization result in a confident, well-adjusted adult dog.  A licensed veterinarian will also be there to discuss puppy health and medical needs. This class is held indoors.  The floors are treated in an effort to discourage the spreading of viruses.  Due to popular demand, reservations are requested.  Class size is limited.</p>
-            <div class="alert"><img src="images/exclamation-circle-solid.svg"><p>• All puppies MUST be current on all vaccinations and have a complete health check up from a licensed veterinarian before entering the class. <br>• First meeting is held without the puppies.</p></div>
+        <h1 class="mobile-header">CLASSES</h1>
+        <div class="class-card-container">
+            <div class="class-card">
+                    <h3>Puppy&nbspPre&nbspSchool &&nbspSocialization</h3>
+                    <ul>
+                        <li>For puppies 8 to 20 weeks</li>
+                        <li>Intro to training, preventing behavior problems, and socialization</li>
+                        <li>Discuss puppy health and medical needs with a licensed veterinarian</li>
+                    </ul>
+                    <p>Puppy Pre-School is invaluable in avoiding future behavior problems and making your training experience much smoother.  The class will be a very positive introduction to training, preventing behavior problems, and in building a relationship with the other members of the family.  All behavior problems will be thoroughly discussed along with socialization.  Training and various types of socialization result in a confident, well-adjusted adult dog.  A licensed veterinarian will also be there to discuss puppy health and medical needs. This class is held indoors.  The floors are treated in an effort to discourage the spreading of viruses.  Due to popular demand, reservations are requested.  Class size is limited.</p>
+            </div>
+            <div class="class-card">
+                <img class="card-pic" src="images/card-puppy-thin.png" alt="puppy">
+                <!-- <div class="card-title-container"> -->
+                    <!-- <img class="card-icon" src="images/dog-solid-black.svg" alt="dog icon"> -->
+                <!-- </div> -->
+                <div class="alert"><img src="images/exclamation-circle-solid.svg"><p>All puppies MUST be current on all vaccinations and have a complete health check up from a licensed veterinarian before entering the class.</p></div>
+                <div class="alert yellow"><img src="images/exclamation-triangle-solid.svg"><p>First meeting is held without the puppies.</p></div>
+            </div>
         </div>
-        <div class="class-card">
-            <img class="card-pic" src="images/card-beginner-thin.png" alt="dog">
-            <h3>Beginning Novice</h3>
-            <p>A class designed for all dogs 4 months or older.  All basic obedience exercises will be taught, such as heeling (walking on the leash without pulling or tugging), automatic sit when you come to a stop, teaching your dog to “come” on command, sit and down stays up to a leash length away with distractions,  the “stand” exercise (good for grooming, bathing or veterinarian checks), boundary training, and more!  All behavior problems will be addressed such as, jumping, digging, biting, barking, chewing, housebreaking, dashing out doors or gates, and more!</p>
+        <div class="class-card-container">
+            <div class="class-card">
+                <img class="card-pic" src="images/card-beginner-thin.png" alt="dog">
+            </div>
+            <div class="class-card">
+                <h3>Beginning Novice</h3>
+                <p>A class designed for all dogs 4 months or older.  All basic obedience exercises will be taught, such as heeling (walking on the leash without pulling or tugging), automatic sit when you come to a stop, teaching your dog to “come” on command, sit and down stays up to a leash length away with distractions,  the “stand” exercise (good for grooming, bathing or veterinarian checks), boundary training, and more!  All behavior problems will be addressed such as, jumping, digging, biting, barking, chewing, housebreaking, dashing out doors or gates, and more!</p>
+            </div>
         </div>
         <div class="class-card">
             <img class="card-pic" src="images/card-beginner-thin.png" alt="dog">
