--- a/index.html
+++ b/index.html
@@ -321,8 +321,9 @@
 		<div class="slogan-box1">
 			<h3>
 				<!-- <img src="images/dog-treat-quote2s-lighter.png"> -->
-				Training <span>You</span> to train your dog<br /> so they listen to <span>You</span>, not us!
+				<!-- Training <span>You</span> to train your dog<br /> so they listen to <span>You</span>, not us! -->
 				<!-- <img src="images/dog-treat-quote2s-lighter.png"> -->
+				A well trained socialized dog is welcome almost everywhere
 			</h3>
 		</div>
 		<div class="slogan-box2"></div>
@@ -396,15 +397,22 @@
 	</div>
 
 	<div class="section-welcomed">
-		<div class="welcomed">
+		<!-- <div class="welcomed">
 			<h3>A well-trained, socialized dog is welcomed almost anywhere!</h3>
-		</div>
+		</div> -->
 	</div>
 
 	<div class="committed">
 		<!-- <img src="images/doberman_pinscher-cutout-v8-leaves-bright.png"> -->
 		<div class="column">
-			<h3>Committed to helping <br><span>each & every client</span> <br>to our fullest extent.</h3>
+			<!-- <h3>Committed to helping <br><span>each & every client</span> <br>to our fullest extent.</h3> -->
+			<h3>Over 29 years of experience</h3>
+			<h4 id="quote-box">
+				<span class="quote">"</span>
+				We wouldn’t just take our puppy to any dog trainer. We came to Live Oak Dog Obedience, because so many people referred us to you.
+				<span class="quote">"</span> 
+			</h4>
+			<h4 id="quote-name">Pat</h4>
 			<a class="button" href="#about">About Us</a>
 		</div>
 		<!-- <img src="images/doberman_pinscher-cutout-v8-leaves-bright.png"> -->
@@ -425,7 +433,7 @@
 		</div>
 		<div class="footerB">
 			<!-- <h2>Call Us!</h2> -->
-			<h4><span>Maya Quintero</span> 
+			<h4><span>Maya Harrison Quintero</span> 
 				<br>Professional Trainer & Behaviorist</h4>
 			<h3>(626) 852 9992</h3>
 			<a href="facebook.com"><img width="75px" src="images/facebook-blue.svg" alt="facebook logo"></a>
