--- a/about.html
+++ b/about.html
@@ -58,40 +58,64 @@
     </nav>
     
     <div id="aboutPg-section-main">
-        <h1>About Us</h1>
-        <p>With over 29 years of experience, Live Oak Dog Obedience is an established local business operating in LA 
-            and San Bernardio County since 1982. Live Oak Dog Obedience offers year-round dog training classes, and 
-            Private In Home Lessons, Trick Classes, in City of Rancho Cucamonga, City of Upland, City of Claremont and
-             City of Glendora.  Classes are generally small so personalized attention and guidance can be achieved.
-            We are proud to serve our new and continuing clients since 1982.  Through non-abusive training techniques,
-             we strive to achieve a well-mannered dog for your family to enjoy.  Our trainer’s/instructors are committed
-              to helping each and every client and their dog to their fullest extent with obedience control, behavior 
-              prevention & modification.</p>
-        <p>We continue to expand to more cities!  Live Oak Dog Obedience is an establishment recommended by veterinarians
-            and is proud of its outstanding reputation.</p>
+        <div class="aboutPg-card">
+            <h1>About Us</h1>
+            <p>With over 29 years of experience, Live Oak Dog Obedience is an established local business operating in LA 
+                and San Bernardio County since 1982. Live Oak Dog Obedience offers year-round dog training classes, and 
+                Private In Home Lessons, Trick Classes, in City of Rancho Cucamonga, City of Upland, City of Claremont and
+                 City of Glendora.  Classes are generally small so personalized attention and guidance can be achieved.
+                We are proud to serve our new and continuing clients since 1982.  Through non-abusive training techniques,
+                 we strive to achieve a well-mannered dog for your family to enjoy.  Our trainer’s/instructors are committed
+                  to helping each and every client and their dog to their fullest extent with obedience control, behavior 
+                  prevention & modification.</p>
+            <p>We continue to expand to more cities!  Live Oak Dog Obedience is an establishment recommended by veterinarians
+                and is proud of its outstanding reputation.</p>
+        </div>
+        <div class="aboutPg-card bigCard">
             <img src="images/about-the-trainer.jpg">
             <h5>Maya Quintero</h5>
             <h6>Owner and Professional Dog Trainer </h6>
+        </div>
+        <div class="aboutPg-card">
             <img src="images/MayaWithKashmereZep.jpg">
             <h6>Trainer Maya with Kashmere and Zep</h6>
+        </div>
+        <div class="aboutPg-card bigCard">
             <img src="images/StacySummer.jpg">
             <h6>Trainer Stacy with Summer</h6>
+        </div>
+        <div class="aboutPg-card">
             <img src="images/MayaStacyBeckyAndrewTerri.jpg">
             <h6>Trainers Maya, Stacy, Becky, Andrew and Terri</h6>
+        </div>
+        <div class="aboutPg-card">
             <img src="images/Deanne.jpg">
             <h6>Trainer Deanne</h6>
+        </div>
+        <div class="aboutPg-card bigCard">
             <img src="images/Jann.jpg">
             <h6>Trainer Jann</h6>
+        </div>
+        <div class="aboutPg-card">
             <img src="images/Andrew.jpg">
             <h6>Trainer Andrew</h6>
+        </div>
+        <div class="aboutPg-card bigCard">
             <img src="images/MayaKashmere.jpg">
             <h6>Maya and Kashmere</h6>
+        </div>
+        <div class="aboutPg-card">
             <img src="images/IntermediateTicTacToe.jpg">
             <h6>Intermediate Class Tic Tac Toe</h6>
+        </div>
+        <div class="aboutPg-card">
             <img src="images/MatyTV.jpg">
             <h6>Maya's dog "Zep" on the Mike and Maty television show. Maya and Kashmiri</h6>
+        </div>
+        <div class="aboutPg-card bigCard">
             <img src="images/4thJulyParade.jpg">
             <h6>Live Oak Dog Obedience trainers and dogs 1st place winners at La Verne 4th of July Parade</h6>
+        </div>
     </div>
 
 	<div class="section-footer">
