--- a/about.html
+++ b/about.html
@@ -35,24 +35,24 @@
 		</div>
 		<ul>
 			<a href="index.html"><li>HOME</li></a>
-			<a class="active" href="classes.html"><li>CLASSES</li></a>
+			<a href="classes.html"><li>CLASSES</li></a>
 			<a href="schedule.html"><li>SCHEDULE</li></a>
 		</ul>
 		<div id="lg-screen-LODO">
 			<h6>Live&nbsp;Oak Dog&nbsp;Obedience</h6>
 		</div>
 		<ul>
-			<a href="about.html"><li>ABOUT</li></a>
-			<a href="contact.html"><li>CONTACT</li></a>
+			<a class="active" href="about.html"><li>ABOUT</li></a>
+			<li id="contact">(626) 852 9992</li>
 		</ul>
 		<img class="splash-logo" src="images/lodo-dog-lt-grey.svg" alt="logo of playful dog">
 		<div id="dropdown">
 			<ul>
-				<a class="active" href="#"><li>HOME</li></a>
+				<a href="index.html"><li>HOME</li></a>
 				<a href="classes.html"><li>CLASSES</li></a>
 				<a href="schedule.html"><li>SCHEDULE</li></a>
-				<a href="about.html"><li>ABOUT</li></a>
-				<a href="contact.html"><li>CONTACT</li></a>
+				<a class="active" href="about.html"><li>ABOUT</li></a>
+				<a href="tel:6268529992"><li>(626) 852 9992</li></a>
 			</ul>
 		</div>
     </nav>
@@ -71,10 +71,17 @@
             <p>We continue to expand to more cities!  Live Oak Dog Obedience is an establishment recommended by veterinarians
                 and is proud of its outstanding reputation.</p>
         </div>
-        <div class="aboutPg-card bigCard">
-            <img src="images/about-the-trainer.jpg">
-            <h5>Maya Quintero</h5>
-            <h6>Owner and Professional Dog Trainer </h6>
+        <div class="aboutPg-card bigCard" id="bioCard">
+            <div id="bioImage">
+                <img src="images/about-the-trainer.jpg">
+            </div>
+            <div id="bioDescription">
+                <h5>Maya Quintero</h5>
+                <h6>Owner and Professional Dog Trainer </h6>
+                <p>Maya is a Professional Dog Trainer since 1991 and  owner of an established local business Live Oak Dog Obedience founded in 1982. She has trained all breeds and personalities of dogs and specializes in behavior modification. She started training and showing dogs as a junior handler and competes in American Kennel Club dog shows.  She is proud of the titles she has earned with her dogs.</p>    
+                <p>Maya is certified with the American Kennel Club as a Canine Good Citizen instructor and evaluator.  She has experience training Service Dogs as well as preparing dogs for Therapy work.  She strives to be an important member in her community and is proud to   promote responsible dog ownership.  Proper training, care and socialization helps dogs become welcomed members of our communities.</p>   
+                <p>Maya believes “a well-trained socialized dog is welcome almost anywhere”.</p> 
+            </div>
         </div>
         <div class="aboutPg-card">
             <img src="images/MayaWithKashmereZep.jpg">
@@ -115,6 +122,105 @@
         <div class="aboutPg-card bigCard">
             <img src="images/4thJulyParade.jpg">
             <h6>Live Oak Dog Obedience trainers and dogs 1st place winners at La Verne 4th of July Parade</h6>
+        </div>
+    </div>
+    <div id="aboutPg-testimonials">
+        <h1>Testimonials</h1>
+        <div class="testimonial">
+            <p>"Live Oak Dog Obedience owner Maya, has such a reputation that everyone talks about!"</p>
+            <p class="quoteName">Pat</p>
+        </div>
+        <div class="testimonial">
+            <p>"Heard from so many people, Live Oak Dog Obedience owner Maya, is the BEST trainer on the south coast!"</p>
+            <p class="quoteName">Julie</p>
+        </div>
+        <div class="testimonial">
+            <p>"We are pleased that you applied to become a Service Dog Evaluator since you have well-rounded experience in the industry."</p>
+            <p class="quoteName">American Kennel Club, Mikki</p>
+        </div>
+        <div class="testimonial">
+            <p>"It is our pleasure to say thanks to Live Oak Dog Obedience for all the help and advice they have provided to our clients. We enjoy having a good working relationship with Live Oak Dog Obedience."</p>
+            <p class="quoteName">Michael C. Weigand Jr. D.V.M., Terra Vista Animal Hospital Rancho Cucamonga</p>
+        </div>
+        <div class="testimonial">
+            <p>"Live Oak Dog Obedience does an outstanding job with all dog obedience programs she offers our residents. All participants that have attended Maya's courses have spoken highly of her programs and are excited to attend each week and to advance into new levels of education. We are proud to have her as an instructor for our community."</p>
+            <p class="quoteName">City of Upland</p>
+        </div>
+        <div class="testimonial">
+            <p>"Live Oak Dog Obedience and participants volunteered by providing dog entertainment to residents at Claremont Retirement Manor who greatly benefited and enjoyed the animal interaction.  Pet therapy such as this has positive properties for senior citizens.  This of course shows how a class can be more than just a recreational activity but provide a positive impact on the community."</p>
+            <p class="quoteName">City of Claremont</p>
+        </div>
+        <div class="testimonial">
+            <p>"Thank you for all the help you have given us. You helped us to get to the next level. Now we feel like we can get through anything."</p>
+            <p class="quoteName">Kruz and Owner</p>
+        </div>
+        <div class="testimonial">
+            <p>"Thank you so much for taking the time to speak to our group.  It is community leaders, like yourself, who help keep us informed and up to date with important information.  Sincerely,"</p>
+            <p class="quoteName">The La Verne/San Dimas Moms Club</p>
+        </div>
+        <div class="testimonial">
+            <p>"Thank you for helping one of our hike club members, Bob with his new dog that is having some pretty serious behavior issues.  You did him a real favor and apparently knew exactly what to do!"</p>
+            <p class="quoteName">California Canine Hikers, Dave</p>
+        </div>
+        <div class="testimonial">
+            <p>"Stephanie and her dog Felix decided enrolled in our dog class conducted by Live Oak Dog Obedience after speaking to other dog owners, who had taken the class previously who had great things to say about Maya, the Owner and Obedience Instructor. Stephanie really enjoyed that the Instructor focused on each individual dog and owner."</p>
+            <p class="quoteName">City of Claremont</p>
+        </div>
+        <div class="testimonial">
+            <p>"Laurie and her dog Max just finished the Claremont Dog Obedience class conducted by Live Oak Dog Obedience.  Max was the 6th puppy in 28 years that Laurie has taken through this class.  Even for a long time dog owner it’s good to be reminded of the basics.  Max loves to show off his training."</p>
+            <p class="quoteName">City of Claremont</p>
+        </div>
+        <div class="testimonial">
+            <p>"Maya, What a great person you are! I love you so much and so grateful for people like you. The love you have for animals is such a wonderful example to so many. You have touched so many lives. Thank you."</p>
+            <p class="quoteName">Joan</p>
+        </div>
+        <div class="testimonial">
+            <p>"You are a lifesaver! Thank you for your dedication to dogs and their owners. Leila, my rescue Cocker Spaniel has come a long way in just 6 weeks. And so have I."</p>
+            <p class="quoteName">Sue</p>
+        </div>
+        <div class="testimonial">
+            <p>"Thank you so much for helping us get Jenna our dog one step closer to becoming a Therapy Dog. We just love your training methods!"</p>
+            <p class="quoteName">Mark & Karen</p>
+        </div>
+        <div class="testimonial">
+            <p>"I am SO glad we got to meet you and that we found you. We have learned so much! It has been a pleasure being your clients and thank goodness we could get one last class in with you before moving to Colorado."</p>
+            <p class="quoteName">Kayla and Spud</p>
+        </div>
+        <div class="testimonial">
+            <p>"Thank you Maya, my people and I learned a ton of stuff. From Daisy an awesome dog!"</p>
+            <p class="quoteName">Earnie and Carol</p>
+        </div>
+        <div class="testimonial">
+            <p>"You are a dear. I loved working with you and my dogs are so much better after have worked with you. Thank you Maya!"</p>
+            <p class="quoteName">Nancy</p>
+        </div>
+        <div class="testimonial">
+            <p>"We're looking forward to the next level class."</p>
+            <p class="quoteName">Kathy</p>
+        </div>
+        <div class="testimonial">
+            <p>"We really enjoyed you and your wonderful art of teaching dog obedience classes.  Your’re one of a kind dog trainer.  Our dog Charlie is such a joy.  We are deeply grateful for all your patience and personality you put in teaching your dog classes."</p>
+            <p class="quoteName">Nancy and Mike</p>
+        </div>
+        <div class="testimonial">
+            <p>"Thank you for all you did helping me train my Labrador, Nani.  She loved your classes."</p>
+            <p class="quoteName">Diana</p>
+        </div>
+        <div class="testimonial">
+            <p>"Thank you so much for all you have done helping me train my dog Molly.  You are a great dog trainer.  Molly loves your classes.  We will be back again and sign Molly up for Intermediate Dog Class."</p>
+            <p class="quoteName">Shelley</p>
+        </div>
+        <div class="testimonial">
+            <p>"THANKS so much for helping us train our new rescue dog, Milo, he is doing better each day and we are better parents to our dog!! Thanks again"</p>
+            <p class="quoteName">David</p>
+        </div>
+        <div class="testimonial">
+            <p>"We both learned so much Thanks to you.  We definitely want to take the next step, Intermediate class.  Thanks again for all your knowledge."</p>
+            <p class="quoteName">Lisa and Roxy Roo</p>
+        </div>
+        <div class="testimonial">
+            <p>"Thanks for all your help and advice. Looking forward to the next classes!"</p>
+            <p class="quoteName">Kathy & Lacy</p>
         </div>
     </div>
 
