--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 		</div>
 		<ul>
 			<a href="about.html"><li>ABOUT</li></a>
-			<a href="contact.html"><li>CONTACT</li></a>
+			<li id="contact">(626) 852 9992</li>
 		</ul>
 		<img class="splash-logo" src="images/lodo-dog-lt-grey.svg" alt="logo of playful dog">
 		<div id="dropdown">
@@ -308,7 +308,7 @@
 				<a href="classes.html"><li>CLASSES</li></a>
 				<a href="schedule.html"><li>SCHEDULE</li></a>
 				<a href="about.html"><li>ABOUT</li></a>
-				<a href="contact.html"><li>CONTACT</li></a>
+				<a href="tel:6268529992"><li>(626) 852 9992</li></a>
 			</ul>
 		</div>
 	</nav>
